--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "three-orbitcontrols-ts": "^0.1.2",
     "three-rounded-box": "^0.1.1",
     "tracking": "^1.1.3",
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "vue-router": "^3.5.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
