--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "cubejs": "^1.3.2",
     "element-ui": "^2.8.2",
+    "file-saver": "^2.0.5",
     "three": "^0.104.0",
     "three-orbitcontrols-ts": "^0.1.2",
     "three-rounded-box": "^0.1.1",
