--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
   "dependencies": {
     "axios": "^0.24.0",
     "cubejs": "^1.3.2",
+    "echarts": "^4.9.0",
     "element-ui": "^2.8.2",
     "file-saver": "^2.0.5",
     "three": "^0.104.0",
     "three-orbitcontrols-ts": "^0.1.2",
     "three-rounded-box": "^0.1.1",
     "tracking": "^1.1.3",
+    "v-charts": "^1.19.0",
     "vue": "^2.5.2",
     "vue-router": "^3.5.2"
   },
   "devDependencies": {
+    "@vue/composition-api": "^1.4.4",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
