--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "babel-polyfill": "^6.26.0",
     "cubejs": "^1.3.2",
     "echarts": "^4.9.0",
-    "element-ui": "^2.8.2",
+    "element-ui": "^2.15.6",
     "file-saver": "^2.0.5",
     "three": "^0.104.0",
     "three-orbitcontrols-ts": "^0.1.2",
@@ -21,6 +22,7 @@
     "tracking": "^1.1.3",
     "v-charts": "^1.19.0",
     "vue": "^2.5.2",
+    "vue-core-image-upload": "^2.4.13",
     "vue-router": "^3.5.2"
   },
   "devDependencies": {
